@@ -1,0 +1,10 @@
+{
+  "name" : "projectionTestWithSchema",
+  "namespace" : "org.apache.pig.test.builtin",
+  "type" : "record",
+  "fields" : [
+    {"name" : "key", "type" : "string"},
+    {"name" : "intValue", "type" : "int"},
+    {"name" : "booleanValue", "type" : "boolean"}
+  ]
+}
