@@ -34,6 +34,8 @@ PIG-3480: TFile-based tmpfile compression crashes in some cases (dvryaboy via an
 
 BUG FIXES
 
+PIG-3833: Relation loaded by AvroStorage with schema is projected incorrectly in foreach statement (jeongjinku via cheolsoo)
+
 PIG-3794: pig -useHCatalog fails using pig command line interface on HDInsight (ehans via daijy)
 
 PIG-3827: Custom partitioner is not picked up with secondary sort optimization (daijy)
